--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           npm run build
 
       - name: Deploy to S3
-        uses: aws-actions/s3-sync@v1
+        uses: aws-actions/aws-s3-sync@v1
         with:
           args: --delete
         env:
