--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,12 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync frontend/dist s3://$AWS_S3_BUCKET --delete
+          aws s3 sync frontend/dist s3://$AWS_S3_BUCKET \
+          --delete \
+          --cache-control "max-age=0,no-cache,no-store,must-revalidate" \  
+          --exact-timestamps \
+          --guess-mime-type
+          
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
 
