--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon server.js",
     "test": "jest --runInBand"
   },
-  
-  "jest":{
+  "jest": {
     "testEnvironment": "node"
   },
   "keywords": [],
@@ -36,6 +35,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "pdf-parse": "^1.1.1",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "resend": "^6.6.0"
   }
 }
